unlinked html and css by now. add the contact section in the html file

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: red;
+    background-image: url(img/bg-new-york.jpg);
     color: white;
     font-family: sans-serif;
 }
