--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,86 @@
+ * {
+     margin: 0;
+     padding: 0;    
+     box-sizing: border-box;
+ }
+
 body{
-    background-image: url(img/bg-new-york.jpg);
+    background: chocolate;
     color: white;
     font-family: sans-serif;
 }
-h1{
-    text-align: center;
-    color: blue;
-    background-color: yellow;
+header {
+    background-image: url(img/bg-new-york.jpg);
+    height: 700px;
+    width: 100%;
 }
-#primer_post{
-    text-align: justify;
+nav {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    text-align: right;
+    padding: 10px 20px 0 0;
+    background-color: rgb(17, 15, 161);
+    opacity: .8;
 }
-h5{
-    font-size: 10px;
-    color: rgb(247, 255, 0);
+header a{
+    text-decoration: none;
+    color: rgb(255, 4, 4);
+    padding-left: 10px;
+    font-style: bold;
+    font-size: 25px;
 }
-h2{
-    text-align: center;
-    font-size: 200%;
-    color: yellow;
+header a:hover {
+    color: white;
     text-decoration: underline;
 }
-h3{
-    color:yellow;
-}
-a{
-    color:yellow;
-    text-decoration: none;
-}
-p{
-    text-align: justify;
-}
-#tips{
-    font-size: 25px;
+header div a {
     color: yellow;
 }
-#memo{
-    text-align: right;
-    color: dark red;
-    font-family: helvetica;
+.titulos-header{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding: 250px 0 200px;  
+    margin: auto;
+    text-align: center;
+}
+.contenedor {
+    width: 100%;
+    height: 700px;
+    padding: 60px;
+}
+.sobre-mi {
+    background-color: rgb(17, 15, 161);
+}
+.proyectos{
+    background-color: rgb(15, 161, 27);
+}
+.articulos-escritos {
+    background-color: rgb(62, 122, 72);
+}
+.contacto {
+    background-color: rgb(126, 14, 14);
+}
+footer {
+    background-color: rgb(12, 12, 14);
+    text-align: center;
+}
+footer a {
+    margin-right: 25px;
+    font-size: 25px;
+    padding: 20px;
+    text-decoration: none;
+}
+footer a:hover {
+    text-decoration: underline;
+    color: white;
+}
+.copyright-footer {
+    text-align: center;
+    margin-right: 20px;
+}
+.copyright-footer img {
+    height: 20px;
+    width: 20px;
 }
