--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,9 @@ h2 {
 .sobre-mi {
     background-color: rgb(17, 15, 161);
 }
+.techs {
+    background-color: #333;
+}
 .proyectos{
     background-color: rgb(15, 161, 27);
 }
@@ -129,10 +132,13 @@ h2 {
 
 .contact {
     background-color: #333;
+    width: 100%;
 }
 .form { 
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
+    align-content: center;
     padding: 50px 0 50px 0px;
     width: 100%;
     height: 100%;
@@ -140,10 +146,12 @@ h2 {
 .form__flex-input {
     display: flex;
     flex-flow: column wrap;
+    justify-content: center;
     align-content: center;
     width: 100%;
     padding: 50px;
     margin: 0;
+    min-width: 400px;
 }
 .form__input {
     color: #fff;
