--- a/styles.css
+++ b/styles.css
@@ -1,279 +1,350 @@
- * {
-     margin: 0;
-     padding: 0;    
-     box-sizing: border-box;
-     font-size: 1em;
- }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 1em;
+}
 
-body{
-    background-color: #000;
-    color: white;
-    font-family: 'Open Sans', sans-serif;
+body {
+  background-image: url(img/bg-new-york.jpg);
+  background-size: contain;
+  background-position: top;
+  color: white;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* Primera pantalla de la pagina, header y nav*/
 header {
-    /* background-image: url(img/bg-new-york.jpg);  */
-    width: 100%;
-    object-fit: cover;
+  /* background-image: url(img/bg-new-york.jpg);  */
+  width: 100%;
+  object-fit: cover;
 }
 .header__bg {
-    background-size: cover;
-    background-position: center center;
+  background-size: cover;
+  background-position: center center;
 }
 nav {
-    display: flex;
-    flex-flow: row wrap;
-    font-family: 'Dancing Script', cursive;
-    background: linear-gradient(to left, transparent, lightblue);
-    position: absolute;
-    width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  font-family: "Dancing Script", cursive;
+  background: linear-gradient(to left, transparent, lightblue);
+  position: absolute;
+  width: 100%;
 }
 nav span {
-    flex: 2;
+  flex: 2;
+  margin: auto 1em;
 }
 nav span img {
-    padding: .3em 0 .3em .8em;
-    height: 2em;
+  padding: auto 0 auto 0.8em;
+  height: 2em;
 }
-header a{
-    text-decoration: none;
-    color: #000;
-    padding: 0 10px;
-    font-style: bold;
-    font-size: 1.5em;
-    margin: 10px;
-    text-align: center;
+header a {
+  text-decoration: none;
+  color: #000;
+  padding: 0 10px;
+  font-style: bold;
+  font-size: 1.5em;
+  margin: 10px;
+  text-align: center;
 }
 header nav a:hover {
-    border: 2px solid #000;
-    border-radius: 80%;
-    box-shadow: 10px 10px 8px #000; 
-    transition: all .5s;
+  border: 2px solid #000;
+  border-radius: 25%;
+  box-shadow: 10px 10px 8px #000;
+  transition: all 0.5s;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 590px) {
-    nav {
-        display: grid;
-        grid-template: repeat(5, 1fr) / 1fr 1fr;
-        top: -190px;
-        transition: all .5s;
-    }
-    nav:hover {
-        top: 0px;
-        margin: 0 0 20px 0;
-    }
-    nav span {
-        grid-row: 1 / span 5;
-        align-self: flex-end;
-        justify-self: center;
-    }
-    nav span img {
-        height: 3em;
-        
-    }
+  nav {
+    display: grid;
+    grid-template: repeat(5, 1fr) / 1fr 1fr;
+    top: -190px;
+    transition: all 0.5s;
+  }
+  nav:hover {
+    top: 0px;
+    margin: 0 0 20px 0;
+    cursor: pointer;
+  }
+  nav span {
+    grid-row: 1 / span 5;
+    align-self: flex-end;
+    justify-self: center;
+    margin: 5px;
+  }
+  nav span img {
+    height: 2.5em;
+  }
+  .titulos-header--h1 {
+    color: #000;
+  }
 }
 
-.titulos-header{
-    display: grid;
-    grid-template: 1fr 1fr / 1fr;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    padding: 250px 0 200px;  
-    margin: auto;
-    text-align: center;
-    
+.titulos-header {
+  display: grid;
+  grid-template: 1fr 1fr / 1fr;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding: 250px 0 200px;
+  margin: auto;
+  text-align: center;
 }
 .titulos-header--h1 {
-    transition: all .8s;
-    font-size: 3em;
+  position: relative;
+  font-size: 3em;
+  animation-name: animationHeader;
+  animation-duration: 3s;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  transition: all 0.8s;
+  left: 0;
+}
+/* Animacion para el titulo de la pagina */
+@keyframes animationHeader {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: 40%;
+  }
+  100% {
+    left: 0;
+    font-size: 1em;
+  }
 }
 
 .titulos-header--h1:hover {
-    color:rgb(8, 6, 10);
-    font-size: 2em;
-    
+  color: rgb(8, 6, 10);
+  font-size: 2em;
+  cursor: pointer;
 }
-.titulos-header--a > a{
-    color: #fff;
-    font-style: normal;
-    font-size: 15px;
-    justify-self: center;
-    align-self: flex-start;
-    transition: all .8s;
-    text-decoration: none;
-    margin: 50px 0;
+.titulos-header--a > a {
+  color: #fff;
+  font-style: normal;
+  font-size: 15px;
+  justify-self: center;
+  align-self: flex-start;
+  transition: all 0.8s;
+  text-decoration: none;
+  margin: 50px 0;
 }
 
 .titulos-header--a > a:hover {
-    font-size: 20px;
-    border: 2px solid #000;
-    border-radius: 80%;
-    box-shadow: 10px 10px 8px #000;
+  font-size: 20px;
+  border: 2px solid #000;
+  border-radius: 25%;
+  box-shadow: 10px 10px 8px #000;
+  cursor: pointer;
 }
 
 /* Contenido principal de la pagina */
 
 h2 {
-    text-align: center;
-    margin: 50px 0;
-    font-size: 30px;
+  text-align: center;
+  margin: 50px 0;
+  font-size: 30px;
 }
 .contenedor {
-    width: 100%;
-    padding: 10px;
+  width: 100%;
+  padding: 10px;
 }
 
 .contenedor > div {
-    display: flex;
-    flex-flow: row wrap;
+  display: flex;
+  flex-flow: row wrap;
 }
-
 .contenedor div div {
-    flex: 1;
-    box-shadow: 5px 5px 8px #000;
-    margin: 5px;
-    padding: 5px;
-    min-width: 250px;
+  flex: 1;
+  box-shadow: 5px 5px 8px #000;
+  margin: 5px;
+  padding: 5px;
+  min-width: 250px;
 }
-
 .sobre-mi {
-    background-color: rgb(17, 15, 161);
-}
-.techs {
-    background-color: #333;
-}
-.proyectos{
-    background-color: rgb(15, 161, 27);
-}
-.articulos-escritos {
-    background-color: rgb(62, 122, 72);
+  background: linear-gradient(to bottom, transparent, rgb(37, 36, 94));
 }
 
+.techs {
+  background: linear-gradient(to bottom, rgb(37, 36, 94), #333);
+}
+.proyectos {
+  background: linear-gradient(to bottom, #333, rgb(15, 161, 27));
+}
+
+.articulos-escritos {
+  background: linear-gradient(to bottom, rgb(15, 161, 27), rgb(62, 122, 72));
+}
+
+/* Modelo de la carta para temas distintos */
+.card {
+  display: flex;
+  flex-flow: row wrap;
+  align-content: space-between;
+  top: 0;
+}
+.card:hover {
+  box-shadow: 8px 8px 10px #000;
+}
+.card__img {
+  background-size: cover;
+  background-position: center center;
+  min-height: 300px;
+  box-shadow: none;
+  margin: 50px 0;
+}
+
+.card article {
+  margin-top: 2em;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+}
+
+.card article h4,
+p {
+  margin: 10px 0;
+}
 
 /* Formulario de contacto */
 
 .contact {
-    background-color: #333;
-    width: 100%;
+  background: linear-gradient(to bottom, rgb(62, 122, 72), #333);
+  width: 100%;
+  padding: 50px;
 }
-.form { 
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-content: center;
-    padding: 40px 0;
-    width: 100%;
+
+#formId {
+  box-shadow: none;
+}
+
+#formIdInput {
+  box-shadow: none;
+}
+
+.form {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-content: center;
+  padding: 10px;
+  width: 100%;
+  /* outline: 5px solid red; */
+  box-shadow: 5px 5px 8px #000 !important;
 }
 .form__flex-input {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-content: center;
-    width: 95%;
-    padding: 10px;
-    margin: 0;
-    min-width: 400px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-content: center;
+  padding: 10px;
+  margin: 0;
+  width: 95%;
+  min-width: 150px;
+  max-width: 500px;
 }
 .form__input {
-    color: #fff;
-    background: linear-gradient(to top, #222, #333);
-    margin: 10px 0px;
-    padding: 0px;
-    border: none;
-    text-align: left;
-    outline: none;
-    border-bottom: 1px solid #000;
-    border-radius: 5%;
-    width: 95%;
-    flex: 1;
+  color: #fff;
+  font-size: 1em;
+  background: linear-gradient(to top, #222, #333);
+  margin: 10px 0px;
+  padding: 0px;
+  border: none;
+  text-align: left;
+  outline: none;
+  border-bottom: 2px solid #000;
+  border-radius: 5%;
+  width: 100%;
+  flex: 1;
+  height: 50px;
 }
 
 #mensaje {
-    height: 150px !important;
-    resize: none;
+  height: 150px;
+  font-size: 1em;
+  resize: none;
+  padding-bottom: 100px;
 }
 
-.form__input::placeholder{
-    color: #fff;
-    font-family: 'Sen', sans-serif;
-    text-align: left;
-    opacity: .5;
+.form__input::placeholder {
+  color: #fff;
+  font-family: "Sen", sans-serif;
+  text-align: left;
+  opacity: 0.5;
 }
 .form__input:focus {
-    outline: none;
-    border-bottom: 2px solid #000;
-    transition: all .4s;
-    background: linear-gradient(to top, #333, #222);
+  outline: none;
+  border-bottom: 4px solid #000;
+  transition: all 0.4s;
+  background: linear-gradient(to top, #333, #222);
 }
 .form__button {
-    text-align: center;
-    color: #fff;
-    background: #000;
+  text-align: center;
+  color: #fff;
+  background: #000;
+  height: 100px;
 }
 
 .form__button:active {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .form__img {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 0;
-    box-shadow: 0 !important; /*REVISAR box-shadow*/
-    border: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border: none;
 }
 
 .form__img img {
-    align-self: center;
-    max-width: 250px;
-    border-radius: 50%;
-    margin: 0;
+  align-self: center;
+  max-width: 250px;
+  border-radius: 50%;
 }
-
 
 /* Pie de pagina con informacion de RRSS*/
 
 footer {
-    background-color: rgb(12, 12, 14);
-    text-align: center;
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-flow: column nowrap;
+  background-color: rgb(12, 12, 14);
+  text-align: center;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .footer__h2 {
-    margin: 0;
-    background: linear-gradient(to bottom, #333, #000);
+  margin: 0;
+  background: linear-gradient(to bottom, #333, #000);
 }
 footer a {
-    font-size: 25px;
-    padding: 20px;
-    text-decoration: none;
-    transition: all .5s;
+  font-size: 25px;
+  padding: 20px;
+  text-decoration: none;
+  transition: all 0.5s;
 }
 footer a:hover {
-    text-decoration: underline;
-    color: white;
+  text-decoration: underline;
+  color: white;
+  cursor: pointer;
 }
 
 .footer-cont {
-    width: 100%;
-    display: flex;
-    flex-flow: row wrap;
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
 }
 .footer-cont a {
-    flex: 1;
+  flex: 1;
 }
 
 .copyright-footer {
-    text-align: center;
-    margin: 0 20px;
-    font-size: 1em;
+  text-align: center;
+  margin: 0 20px;
+  font-size: 1em;
 }
 .copyright-footer img {
-    width: 1em;
+  width: 1em;
 }
