--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,12 @@ header nav a:hover {
   cursor: pointer;
 }
 
+#nav__btn-menu:hover {
+  box-shadow: none;
+  border: none;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 590px) {
   nav {
     display: grid;
@@ -140,6 +146,7 @@ h2 {
 .contenedor {
   width: 100%;
   padding: 10px;
+  scroll-behavior: smooth;
 }
 
 .contenedor > div {
@@ -161,10 +168,12 @@ h2 {
   background: linear-gradient(to bottom, rgb(37, 36, 94), #333);
 }
 .proyectos {
+  display: none;
   background: linear-gradient(to bottom, #333, rgb(15, 161, 27));
 }
 
 .articulos-escritos {
+  display: none;
   background: linear-gradient(to bottom, rgb(15, 161, 27), rgb(62, 122, 72));
 }
 
@@ -214,7 +223,7 @@ h2 {
 /* Formulario de contacto */
 
 .contact {
-  background: linear-gradient(to bottom, rgb(62, 122, 72), #333);
+  background: linear-gradient(to bottom, #333, #333);
   width: 100%;
   padding: 50px;
 }
@@ -337,7 +346,10 @@ footer a:hover{
   color: white;
   cursor: pointer;
 }
+.fa-discord {
 
+  transition: content 1s;
+}
 .fa-discord:hover::after { 
   content: " ArpaiaJQ";
   color: white;
@@ -354,7 +366,4 @@ footer a:hover{
   text-align: center;
   margin: 0 20px;
   font-size: 1em;
-}
-.copyright-footer img {
-  width: 1em;
 }
