--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -10,8 +14,8 @@ body {
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-  color: white;
   font-family: "Open Sans", sans-serif;
+  color: white;
 }
 
 /* Primera pantalla de la pagina, header y nav*/
@@ -146,7 +150,6 @@ h2 {
 .contenedor {
   width: 100%;
   padding: 10px;
-  scroll-behavior: smooth;
 }
 
 .contenedor > div {
@@ -179,14 +182,13 @@ h2 {
 
 /* Modelo de la carta para temas distintos */
 .card {
+  background-color: #fff6;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  align-content: center;
   justify-content: space-between;
   position: relative;
   top: 0;
-  background-color: #fff6;
 }
 
 .card p {
@@ -202,22 +204,25 @@ h2 {
   background-size: cover;
   background-position: center center;
   min-height: 300px;
-  margin: 0;
+  margin: 20px;
+}
+
+.card_img img {
+  width: 90%;
 }
 
 .card__article {
   margin-top: 1em;
   display: flex;
   flex-flow: column wrap;
-  align-content: space-between;
+  justify-content: space-between;
 }
 
 .card__article h4 {
-  margin-top: 0;
-  margin-left: 10px;
+  align-self: center;
 }
- .card__article-author{
-   margin-bottom: 0;
+.card__article-author{
+  align-self: flex-end;
  }
 
 /* Formulario de contacto */
@@ -343,16 +348,12 @@ footer p {
 }
 footer a:hover{
   text-decoration: underline;
-  color: white;
+  color: #fff;
   cursor: pointer;
-}
-.fa-discord {
-
-  transition: content 1s;
 }
 .fa-discord:hover::after { 
   content: " ArpaiaJQ";
-  color: white;
+  color: #fff;
   cursor: pointer;
 }
 .footer-cont {
