--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,9 @@ header nav a:hover {
   .titulos-header--h1 {
     color: #000;
   }
+  /* .conocimientos__ilustracion img{
+    height: 400px;
+  } */
 }
 
 .titulos-header {
@@ -158,9 +161,6 @@ h2 {
 }
 .contenedor div div {
   flex: 1;
-  box-shadow: 5px 5px 8px #000;
-  margin: 5px;
-  padding: 5px;
   min-width: 250px;
 }
 .sobre-mi {
@@ -171,12 +171,12 @@ h2 {
   background: linear-gradient(to bottom, rgb(37, 36, 94), #333);
 }
 .proyectos {
-  display: none;
+  display: none; /* SECCION HIDDEN*/
   background: linear-gradient(to bottom, #333, rgb(15, 161, 27));
 }
 
 .articulos-escritos {
-  display: none;
+  display: none; /* SECCION HIDDEN*/
   background: linear-gradient(to bottom, rgb(15, 161, 27), rgb(62, 122, 72));
 }
 
@@ -189,6 +189,9 @@ h2 {
   justify-content: space-between;
   position: relative;
   top: 0;
+  height: 500px;
+  box-shadow: 5px 5px 8px #000;
+  margin: 5px;
 }
 
 .card p {
@@ -203,12 +206,8 @@ h2 {
 .card__img {
   background-size: cover;
   background-position: center center;
-  min-height: 300px;
-  margin: 20px;
-}
-
-.card_img img {
-  width: 90%;
+  height: 300px;
+  box-shadow: none;
 }
 
 .card__article {
@@ -224,6 +223,59 @@ h2 {
 .card__article-author{
   align-self: flex-end;
  }
+
+ /* Seccion de conocimientos y tecnologias aprendidas */
+
+.conocimientos > div{
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: center;
+  align-items: center;
+}
+
+.conocimientos .conocimientos__img {
+  display: grid;
+  grid-template: 1fr 1fr / 1fr 1fr;
+  /* border: 2px solid #fff; */
+}
+
+.conocimientos__img div {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  padding-right: 10px;
+  margin-bottom: 20px;
+  /* border: 2px solid #fff; */
+}
+
+.conocimientos__img div img{
+  flex: 3;
+  max-height: 150px;
+  min-height: 50px;
+}
+.conocimientos__ilustracion {
+  display: flex;
+  justify-content: center;
+  flex: 2;
+  margin-bottom: 10px;
+  
+}
+.conocimientos__ilustracion img{
+  max-height: 250px;
+  min-height: 200px;
+  /* border: 2px solid #fff; */
+}
+
+@media screen and (max-width: 800px) {
+  .conocimientos .conocimientos__img {
+    grid-template: 1fr 1fr 1fr 1fr / 1fr;
+  }
+  .conocimientos__ilustracion img{
+    height: 200px;
+  }
+}
+
 
 /* Formulario de contacto */
 
