written mistakes corrected. changed js logic title load

--- a/styles.css
+++ b/styles.css
@@ -102,13 +102,14 @@ header nav a:hover {
     color: #fff;
   }
   .titulos-header--a {
-    color: #fff;
+    color: #000;
   }
 }
 
 .titulos-header {
-  display: grid;
-  grid-template: 1fr 1fr / 1fr;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -117,47 +118,26 @@ header nav a:hover {
   text-align: center;
 }
 .titulos-header--h1 {
-  animation: animationHeader 3s ease 1 .5s normal forwards;
-  font-size: 4em;
+  font-size: 3em;
   color: #222;
   letter-spacing: 1px;
   transition: all .8s;
 }
-/* Animacion para el titulo de la pagina */
-@keyframes animationHeader {
-  0% {
-    letter-spacing: 25px;
-  }
-  50% {
-    letter-spacing: 45px;
-  }
-  100% {
-    font-size: 4em;
-    letter-spacing: 1px;
-  }
-}
 
-.titulos-header--h1:hover{
-  cursor: pointer;
-  transform: scale(1.1);
-}
-.titulos-header--a > a {
-  color: #fff;
+.titulos-header--a {
+  color: #000;
   font-style: normal;
   font-size: 15px;
-  justify-self: center;
-  align-self: flex-start;
+  justify-self: flex-start;
+  align-self: center;
   transition: all 0.8s;
   text-decoration: none;
-  margin: 50px 0;
+  margin: 5px 0;
 }
-
-.titulos-header--a > a:hover {
-  border: 2px solid #000;
-  border-radius: 25%;
-  box-shadow: 10px 10px 8px #000;
-  cursor: pointer;
-}
+.titulos-header--a p {
+  background: rgb(15, 161, 27);
+  opacity: .9;
+} 
 
 /* Contenido principal de la pagina */
 
