--- a/styles.css
+++ b/styles.css
@@ -1,253 +1,29 @@
- * {
-     margin: 0;
-     padding: 0;    
-     box-sizing: border-box;
-     font-size: 1em;
- }
-
-body{
-    background-color: #000;
-    color: white;
-    font-family: 'Open Sans', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 1em;
 }
 
-/* Primera pantalla de la pagina, header y nav*/
-header {
-    background-image: url(img/bg-new-york.jpg); 
-    width: 100%;
-    object-fit: cover;
+body {
+  background-color: #000;
+  color: white;
+  font-family: sans-serif;
 }
 
-nav {
-    display: flex;
-    flex-flow: row wrap;
-    font-family: 'Dancing Script', cursive;
-    background: linear-gradient(to left, transparent, lightblue);
-    position: absolute;
-    width: 100%;    
-    height: 50px;
-}
-
-nav span {
-    flex: 3;
-    justify-self: flex-start;
-    font-size: 35px;
-}
-header a{
-    text-decoration: none;
-    color: #000;
-    padding: 0 10px;
-    font-style: bold;
-    font-size: 25px;
-    margin: 10px;
-}
-header nav a:hover {
-    color: #fff;
-    border: 2px solid #000;
-    border-radius: 100px;
-    box-shadow: 10px 10px 8px #000; 
-    transition: all .5s;
-}
-
-.titulos-header{
-    display: grid;
-    grid-template: 1fr 1fr / 1fr;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    padding: 250px 0 200px;  
-    margin: auto;
-    text-align: center;
-    
-}
-.titulos-header--h1 {
-    transition: all .8s;
-    font-size: 50px;
-}
-
-.titulos-header--h1:hover {
-    color:rgb(8, 6, 10);
-    font-size: 70px;
-    
-}
-
-.titulos-header--a > a{
-    color: #fff;
-    font-style: normal;
-    font-size: 15px;
-    justify-self: center;
-    align-self: flex-start;
-    transition: all .8s;
-    text-decoration: none;
-    margin: 50px 0;
-}
-
-.titulos-header--a > a:hover {
-    font-size: 20px;
-    border: 2px solid #000;
-    border-radius: 100px;
-    box-shadow: 10px 10px 8px #000;
-}
-
-/* Contenido principal de la pagina */
-
-h2 {
-    text-align: center;
-    margin: 50px 0;
-    font-size: 30px;
-}
-.contenedor {
-    width: 100%;
-    padding: 10px;
-}
-
-.contenedor > div {
-    display: flex;
-    flex-flow: row wrap;
-}
-
-.contenedor div div {
-    flex: 1;
-    border: 5px dashed #000;
-    margin: 5px;
-    padding: 5px;
-    max-width: 450px;
-}
-
-.sobre-mi {
-    background-color: rgb(17, 15, 161);
-}
-.techs {
-    background-color: #333;
-}
-.proyectos{
-    background-color: rgb(15, 161, 27);
-}
-.articulos-escritos {
-    background-color: rgb(62, 122, 72);
-}
-
-
-/* Formulario de contacto */
-
-.contact {
-    background-color: #333;
-    width: 100%;
-}
-.form { 
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-content: center;
-    padding: 50px 0 50px 0px;
-    width: 100%;
-    height: 100%;
-}
-.form__flex-input {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-content: center;
-    width: 100%;
-    padding: 50px;
-    margin: 0;
-    min-width: 400px;
-}
-.form__input {
-    color: #fff;
-    background: linear-gradient(to top, #222, #333);
-    margin: 10px 10px;
-    padding: 5px;
-    border: none;
-    text-align: left;
-    outline: none;
-    border-bottom: 1px solid #000;
-    border-radius: 5%;
-    width: 100%;
-}
-
-#mensaje {
-    height: 150px;
-    resize: none;
-}
-
-.form__input::placeholder{
-    color: #fff;
-    font-family: 'Sen', sans-serif;
-    text-align: left;
-    opacity: .5;
-}
-.form__input:focus {
-    outline: none;
-    border-bottom: 2px solid #000;
-    transition: all .4s;
-    background: linear-gradient(to top, #333, #222);
-}
-.form__button {
-    text-align: center;
-    color: #fff;
-    background: #000;
-}
-
-.form__button:active {
-    background-color: transparent;
-}
-
-.form__img {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 0;
-}
-
-.form__img img {
-    align-self: center;
-    max-width: 250px;
-    border-radius: 50%;
-    margin: 0;
-}
-
-
-/* Pie de pagina con informacion de RRSS*/
-
-footer {
-    background-color: rgb(12, 12, 14);
-    text-align: center;
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-flow: column nowrap;
-}
-
-.footer__h2 {
-    margin: 0;
-    background: linear-gradient(to bottom, #333, #000);
-}
-footer a {
-    font-size: 25px;
-    padding: 20px;
-    text-decoration: none;
-    transition: all .5s;
-}
-footer a:hover {
-    text-decoration: underline;
-    color: white;
-}
-
-.footer-cont {
-    width: 100%;
-    display: flex;
-    flex-flow: row wrap;
-}
-.footer-cont a {
-    flex: 1;
-}
-
-.copyright-footer {
-    text-align: center;
-    margin: 0 20px;
-    font-size: 1em;
-}
-.copyright-footer img {
-    width: 1em;
+.coming-soon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  font-size: 3em;
+  padding: 3rem;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
